# tanuki_apps

./: .gitignore
bellows_diecut/: README.md  pyproject.toml
bellows_diecut/src/bellows_diecut/: __init__.py  bellows_config.json  config.py  parameters.py
bellows_diecut/src/bellows_diecut/bpy_generated/: build_debug.py  import_mesh.py
bellows_diecut/src/bellows_diecut/core/: __init__.py  diecut.py  exporter.py  foldcore.py  geometry.py  roller.py  roller_gn.py  tessellate.py
bellows_diecut/src/bellows_diecut/output/: README.md  accordion_corners_roller_diecut.py  accordion_corners_roller_gn.py  accordion_corners_tile_diecut.py  accordion_roller_diecut.py  accordion_roller_gn.py  accordion_tile_diecut.py  debug_bellows.blend  kresling_roller_diecut.py  kresling_roller_gn.py  kresling_tile_diecut.py  miura_roller_diecut.py  miura_roller_gn.py  miura_tile_diecut.py  resch_roller_diecut.py  resch_roller_gn.py  resch_tile_diecut.py  waterbomb_roller_diecut.py  waterbomb_roller_gn.py  waterbomb_tile_diecut.py  yoshimura_roller_diecut.py  yoshimura_roller_gn.py  yoshimura_tile_diecut.py
bellows_diecut/src/bellows_diecut/patterns/: __init__.py  accordion.py  accordion_corners.py  kresling.py  miura.py  resch.py  waterbomb.py  yoshimura.py
bellows_diecut/src/bellows_diecut/web/: __init__.py  __main__.py  server.py
halo_maps/: README.md  pyproject.toml
halo_maps/src/halo_maps/: __init__.py  bootstrap.py  export.py  generators.py  scene.py  validators.py
print_labo/: 00_lamp.py  01_lamp.py  README.md  output.py  pyproject.toml
print_labo/tests/: test_dev_mode.py
(+98 files in other folders)
