[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bellows_diecut"
version = "0.1.0"
description = "Bellows diecut application"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bellows_diecut"]
