[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "halo-maps"
version = "0.1.0"
description = "Halo Maps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/halo_maps"]
